gcc/testsuite/rust/rustc/ui/error-codes/E0263_dg.rs
fn foo<'a, 'b, 'a>(x: &'a str, y: &'b str) {
// { dg-error ".E0403." "" { target *-*-* } .-1 }
}

fn main() {}

